Print more info during build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,12 +9,16 @@ phases:
       %{~ for key,val in env ~}
       - "echo '${key}=\"${val}\"' >> ${env_file_name}"
       %{~ endfor ~}
-      - "echo 'Env File Name: ${env_file_name}'"
-      - "echo 'Env File Contents:'"
-      - "cat ${env_file_name}"
   %{~ endif ~}
   build:
     commands:
+      - "echo 'Working Directory:'"
+      - "pwd"
+      - "echo 'LS current directory:'"
+      - "ls"
+      - "echo 'Env File Name: ${env_file_name}'"
+      - "echo 'Env File Contents:'"
+      - "cat ${env_file_name}"
       - "${build_command}"
 artifacts:
   name: BUILD
