--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,8 @@ phases:
   install:
     runtime-versions:
       nodejs: 10
+    commands:
+      - npm install -g npm-cli-login
   %{~ if length(env) != 0 ~}
   pre_build:
     commands:
@@ -12,6 +14,9 @@ phases:
   %{~ endif ~}
   build:
     commands:
+      %{~ if do_npm_login ~}
+      - npm-cli-login -u $NPM_USER -p $NPM_PASS -e $NPM_EMAIL
+      %{~ endif ~}
       - "${build_command}"
 artifacts:
   name: BUILD
